<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cardview"
    android:layout_margin="12dp"
    card_view:cardBackgroundColor="@color/purple_200"
    card_view:cardCornerRadius="20dp"
    card_view:cardElevation="6dp"
    card_view:contentPadding="4dp">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/item_imagen"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtNombre"
            android:textColor="@color/white"
            android:id="@+id/txtNombre"
            android:textStyle="bold"
            android:layout_toEndOf="@+id/item_imagen"
            android:layout_toRightOf="@+id/item_imagen"
            android:layout_alignParentTop="true"
            android:textSize="25sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtDireccion"
            android:textColor="@color/white"
            android:id="@+id/txtDireccion"
            android:textStyle="bold"
            android:layout_toEndOf="@+id/item_imagen"
            android:layout_toRightOf="@+id/item_imagen"
            android:layout_below="@id/txtNombre"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtPedido"
            android:textColor="@color/white"
            android:id="@+id/txtPedido"
            android:textStyle="bold"
            android:layout_toEndOf="@+id/item_imagen"
            android:layout_toRightOf="@+id/item_imagen"
            android:layout_below="@id/txtDireccion"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnTermina"
            android:layout_toEndOf="@id/item_imagen"
            android:layout_below="@id/txtPedido"
            android:text="@string/entregaP"/>



    </RelativeLayout>


</androidx.cardview.widget.CardView>